# data_structures

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.MD  docker-compose.yml
.github/workflows/: cmake-single-platform.yml
array_list/: README.MD  array_list.c  array_list.h
array_list/test/: array_list_test.c
avl_tree/: avl_tree.c  avl_tree.h
avl_tree/test/: avl_tree_test.c
binary_search_tree/: binary_search_tree.c  binary_search_tree.h
binary_search_tree/test/: binary_search_tree_test.c
circular_linked_list/: README.MD  circular_linked_list.c  circular_linked_list.h  main.c
circular_linked_list/test/: circular_linked_list_test.c
doubly_circular_linked_list/: README.MD  doubly_circular_linked_list.c  doubly_circular_linked_list.h  main.c
doubly_circular_linked_list/test/: doubly_circular_linked_list_test.c
doubly_linked_list/: README.MD  doubly_linked_list.c  doubly_linked_list.h  main.c
doubly_linked_list/test/: doubly_linked_list_test.c
linked_list/: README.MD  linked_list.c  linked_list.h  main.c  meu_programa
linked_list/test/: linked_list_test.c
queue/: README.MD  queue.c  queue.h
queue/test/: queue_test.c
stack/: README.MD  stack.c  stack.h
stack/test/: stack_test.c
